--- a/index.html
+++ b/index.html
@@ -752,6 +752,7 @@
 	</div>
 	<!-- libs-->
 	<script src="../../../ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="js/libs.min.js"></script>
 	<!-- scripts-->
 	<script src="js/common.js"></script>
