--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
 								src="ing/logo.jpg" alt="logo" /></a></div>
 					<div class="col-6 col-lg-8 d-flex justify-content-end">
 						<!-- main menu start-->
-						<ul class="main-menu">
-							<li class="main-menu__item main-menu__item--has-child main-menu__item--active"><a
+												<ul class="main-menu ">
+							<li class="main-menu__item main-menu__item--has-child main-menu__item"><a
 									class="main-menu__link" href="javascript:void(0);"><span>Home</span></a>
 								<!-- sub menu start-->
 								<ul class="main-menu__sub-list">
@@ -211,16 +211,16 @@
 								</ul>
 								<!-- sub menu end-->
 							</li>
-							<li class="main-menu__item main-menu__item--has-child"><a class="main-menu__link"
-									href="javascript:void(0);"><span>Destinations</span></a>
+							<li class="main-menu__item main-menu__item--has-child main-menu__item"><a
+									class="main-menu__link" href="javascript:void(0);"><span>destination</span></a>
 								<!-- sub menu start-->
-								<ul class="main-menu__sub-list sub-list--style-2">
-									<li><a href="mara.html"><span>Massai Mara</span></a></li>
-									<li><a href="mara.html"><span>Diani</span></a></li>
-									<li><a href="victoria.html"><span>Victoria falls</span></a></li>
-									<li><a href="victoria.html"><span>Lewa</span></a></li>
-									<li><a href="gallery_2.html"><span>Ol pejeta</span></a></li>
-									<li><a href="gallery_2.html"><span>Amboseli</span></a></li>
+								<ul class="main-menu__sub-list">
+									<li><a href="index.html"><span>Massai Mara</span></a></li>
+									<li><a href="index.html"><span>Diani</span></a></li>
+									<li><a href="index.html"><span>victoria falls</span></a></li>
+									<li><a href="index.html"><span>lawa</span></a></li>
+									<li><a href="index.html"><span>Ol pejeta</span></a></li>
+									<li><a href="index.html"><span>Amboseli</span></a></li>
 
 								</ul>
 								<!-- sub menu end-->
