--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 								src="ing/logo.jpg" alt="logo" /></a></div>
 					<div class="col-6 col-lg-8 d-flex justify-content-end">
 						<!-- main menu start-->
-												<ul class="main-menu ">
+						<ul class="main-menu ">
 							<li class="main-menu__item main-menu__item--has-child main-menu__item"><a
 									class="main-menu__link" href="javascript:void(0);"><span>Home</span></a>
 								<!-- sub menu start-->
@@ -217,7 +217,7 @@
 								<ul class="main-menu__sub-list">
 									<li><a href="index.html"><span>Massai Mara</span></a></li>
 									<li><a href="index.html"><span>Diani</span></a></li>
-									<li><a href="index.html"><span>victoria falls</span></a></li>
+									<li><a href="index.html"><span>vic falls</span></a></li>
 									<li><a href="index.html"><span>lawa</span></a></li>
 									<li><a href="index.html"><span>Ol pejeta</span></a></li>
 									<li><a href="index.html"><span>Amboseli</span></a></li>
@@ -751,8 +751,8 @@
 		<!-- footer end-->
 	</div>
 	<!-- libs-->
-	<script src="../../../ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="../../../ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="js/libs.min.js"></script>
 	<!-- scripts-->
 	<script src="js/common.js"></script>
