--- a/foundation.html
+++ b/foundation.html
@@ -495,6 +495,7 @@
 		<!-- footer end-->
 		</div>
 		<!-- libs-->
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<script src="../../../ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script src="js/libs.min.js"></script>
 		<!-- scripts-->
