--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
 									class="main-menu__link" href="javascript:void(0);"><span>destination</span></a>
 								<!-- sub menu start-->
 								<ul class="main-menu__sub-list">
-									<li><a href="index.html"><span>Massai Mara</span></a></li>
-									<li><a href="index.html"><span>Diani</span></a></li>
-									<li><a href="index.html"><span>vic falls</span></a></li>
+									<li><a href="mara.html"><span>Massai Mara</span></a></li>
+									<li><a href="mara.html"><span>Diani</span></a></li>
+									<li><a href="victoria.html"><span>vic falls</span></a></li>
 									<li><a href="index.html"><span>lawa</span></a></li>
-									<li><a href="index.html"><span>Ol pejeta</span></a></li>
-									<li><a href="index.html"><span>Amboseli</span></a></li>
+									<li><a href="victoria.html"><span>Ol pejeta</span></a></li>
+									<li><a href="gallery_2.html"><span>Amboseli</span></a></li>
 
 								</ul>
 								<!-- sub menu end-->
