--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<!-- styles-->
 	<link rel="stylesheet" href="css/styles.min.css" />
 	<!-- web-font loader-->
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script>
 		WebFontConfig = {
 
@@ -217,10 +218,10 @@
 								<ul class="main-menu__sub-list">
 									<li><a href="mara.html"><span>Massai Mara</span></a></li>
 									<li><a href="mara.html"><span>Diani</span></a></li>
-									<li><a href="victoria.html"><span>vic falls</span></a></li>
-									<li><a href="index.html"><span>lawa</span></a></li>
-									<li><a href="victoria.html"><span>Ol pejeta</span></a></li>
-									<li><a href="gallery_2.html"><span>Amboseli</span></a></li>
+									<li><a href="victoria.html"><span>victoria falls</span></a></li>
+									<li><a href="victoria.html"><span>lawa</span></a></li>
+									<li><a href="index.html"><span>Ol pejeta</span></a></li>
+									<li><a href="index.html"><span>Amboseli</span></a></li>
 
 								</ul>
 								<!-- sub menu end-->
@@ -697,17 +698,17 @@
 					<div class="col-md-7 col-xl-5 d-none d-md-block">
 						<h6 class="footer__title">Menu & Links</h6>
 						<ul class="footer-menu">
-							<li class="footer-menu__item"><a class="footer-menu__link" href="#">Home</a></li>
-							<li class="footer-menu__item"><a class="footer-menu__link" href="#">Where we take you </a>
+							<li class="footer-menu__item"><a class="footer-menu__link" href="index.html">Home</a></li>
+							<li class="footer-menu__item"><a class="footer-menu__link" href="foundation.html">Where we take you </a>
 							</li>
 							<li class="footer-menu__item"><a class="footer-menu__link" href="#">Pages</a></li>
-							<li class="footer-menu__item"><a class="footer-menu__link" href="#">Gallery</a></li>
-							<li class="footer-menu__item"><a class="footer-menu__link" href="#">About</a></li>
+							<li class="footer-menu__item"><a class="footer-menu__link" href="gallery_2.html">Gallery</a></li>
+							<li class="footer-menu__item"><a class="footer-menu__link" href="about.html">About</a></li>
 
 							<li class="footer-menu__item"><a class="footer-menu__link" href="#">Events</a></li>
-							<li class="footer-menu__item"><a class="footer-menu__link" href="#">Gallery</a></li>
+							<li class="footer-menu__item"><a class="footer-menu__link" href="gallery_2.html">Gallery</a></li>
 							<li class="footer-menu__item"><a class="footer-menu__link" href="#">Blog</a></li>
-							<li class="footer-menu__item"><a class="footer-menu__link" href="#">Contacts</a></li>
+							<li class="footer-menu__item"><a class="footer-menu__link" href="contacts.html">Contacts</a></li>
 
 						</ul>
 						=
