--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 									<li><a href="mara.html"><span>Diani</span></a></li>
 									<li><a href="victoria.html"><span>victoria falls</span></a></li>
 									<li><a href="victoria.html"><span>lawa</span></a></li>
-									<li><a href="index.html"><span>Ol pejeta</span></a></li>
-									<li><a href="index.html"><span>Amboseli</span></a></li>
+									<li><a href="gallery_2.html"><span>Ol pejeta</span></a></li>
+									<li><a href="gallery_2.html"><span>Amboseli</span></a></li>
 
 								</ul>
 								<!-- sub menu end-->
